# project_2

./: .flake8  .gitignore  Dockerfile  Dockerfile.base  README.md  deploy.sh  docker-compose.yml  output_bershka.csv  pyproject.toml
.github/workflows/: cd.yml  ci.yml  lint.yml
backend/: data.json  db.sqlite3  response.json  urls.py
backend/backend/: admin.py  db.sqlite3  env.py  models.py  settings.py  translation.py  urls.py
backend/backend/api/: promotions.py
backend/backend/categorizer/: Predictor.py  categories.json  category_predictor.py
backend/backend/fixtures/: categories.json  shops.json
backend/backend/migrations/: 0001_initial.py  0002_remove_article_image_remove_article_location_and_more.py  0003_alter_article_description.py  0004_item_delete_article.py  0005_rename_provider_item_link_to_provider_and_more.py  0006_item_livraison.py  0007_item_online_payment.py  0008_item_last_updated_at.py  0009_alter_item_price_alter_item_title.py  0010_alter_item_category_itemrating.py  0018_like.py  (+13 more)
backend/categorization/: Predictor.py  categories.json
backend/frontend/: urls.py  views.py
backend/login/: forms.py  models.py  urls.py  views.py
backend/scraper/: items.py  pipelines.py  scrapy.cfg  settings.py
html_files/: output.html  output_azziza.html  output_cos.html  output_cos_1.html
nginx/: nginx.conf
scrapping/: main.py  scrapping.py  scrapping_azziza.py  scrapping_beauty_store.py  scrapping_bershka.py  scrapping_cosemetique.py  scrapping_exist.py  scrapping_fatales.py  scrapping_hammadi_abid.py  scrapping_mg.py  scrapping_zara.py
scrapping/to_fix/: scrapping_beauty_store.py  scrapping_fatales.py
(+78 files in other folders)
