[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Amin SAFFAR <amin.saffar@lmad.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2"
django-ninja = "^0.21.0"
black = "^23.3.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
