[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Amin SAFFAR <amin.saffar@lmad.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2"
django-ninja = "^0.21.0"
black = "^23.3.0"
flake8 = "^6.0.0"
pandas = "^2.0.1"
beautifulsoup4 = "^4.12.2"
selenium = "^4.9.0"
requests = "^2.29.0"
tqdm = "^4.65.0"
psycopg2-binary = "^2.9.6"
scrapy = "^2.9.0"
scrapy-djangoitem = "^1.1.1"
gunicorn = "^20.1.0"
django-simple-captcha = "^0.5.18"
django-crispy-forms = "^2.0"
django-recaptcha = "^3.0.0"
crispy-bootstrap4 = "^2022.1"
freezegun = "^1.2.2"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
